assets/stylesheets/redmine_re.css
/* ... */
#sidebar_filter .inputs .input,
#sidebar_filter .inputs .input input {
    width: auto !important;
}

#sidebar_filter .buttons {
    margin: 0 !important;
    padding-left: 0 !important;
    padding-right: 3px !important;
    padding-top: 0 !important;
    padding-bottom: 10px !important;
    text-align: right !important;
}

#sidebar_filter_input_container {
    position: absolute;
    margin: 0;
    padding: 0;
}

#sidebar_filter_input_container .input {
    border: none !important;
    background-color: transparent !important;
}

#sidebar_filter_input_container .input input {
}

#sidebar_filter_input_container .suggestions {
    /*min-width: 300px !important;*/
    position: absolute !important;
    z-index: 999;
    border-top: 1px solid #BBB;
    top: 22px !important;
    left: -1px;
}

/* Filter Details */
div.query.details {
    margin-right: 15px;
}

div.query.details table {
    border-collapse: collapse;
}

div.query.details td.title {
    vertical-align: top;
    padding-right: 10px;
    color: #666;
}

div.query.details td.content {
    vertical-align: top;
}

div.query.details div.description {
    margin-top: 13px;
    font-size: 10px;
    line-height: 13px;
    text-align: justify;
    padding: 10px;
    border: 1px solid #ddd;
    background-color: #ffffdd;
}

